--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    
+    "postcss": "^8.4.20",
+    "autoprefixer": "^10.4.14",
+    "tailwindcss": "^3.4.7",
     "vite": "^5.0.0"
   }
 }
